# RIOT-rust-module-studio

./: .gitmodules  Makefile  README.md
.github/workflows/: rust.yml
crates/mcu-emu/: Cargo.toml
crates/mcu-emu/src/: esp32.rs  lib.rs  native.rs
crates/mcu-if/: Cargo.toml
crates/mcu-if/src/: lib.rs
examples/: esp32.mk  esp32.setup  native.mk  xtensa.mk  xtensa.setup
examples/esp32-no_std/: Cargo.toml  Makefile
examples/esp32-no_std/.cargo/: config
examples/esp32-no_std/include/: rustmod.h
examples/esp32-no_std/main/: Makefile  main.c
examples/esp32-no_std/riot/: Makefile  main.c
examples/esp32-no_std/src/: lib.rs
examples/native-lwip/: .gitignore  Makefile
examples/native-lwip/main/: Makefile
examples/native-sockets/: Makefile
examples/native-sockets/main/: Makefile
examples/native-sockets/riot/: Makefile
examples/runner/: Cargo.toml
examples/runner/src/: main.rs
examples/xbd-base/: Cargo.toml  Makefile
examples/xbd-base/.cargo/: config
examples/xbd-base/main/: main.c
examples/xbd-base/riot/: Makefile
examples/xbd-base/src/: lib.rs
examples/xbd-micropython/: Cargo.toml  Makefile  debug.setup
examples/xbd-micropython/.cargo/: config
examples/xbd-micropython/include/: foo.h  voucher.h  voucher_if.h
examples/xbd-micropython/python3/: .gitignore  Makefile  debug.setup  setup.py  test.py
examples/xbd-micropython/python3/src/voucher/: __init__.py  _md.pxd  _md.pyx
examples/xbd-micropython/python3/src/voucher/mbedtls/: _md.pyx
examples/xbd-micropython/riot/: Makefile  boot.py  main.c
examples/xbd-micropython/riot/custom/: modvoucher.c
examples/xbd-micropython/riot/micropython/: Makefile
examples/xbd-micropython/src/: lib.rs
examples/xbd-micropython/src/tests/: mod.rs  voucher.rs
examples/xbd-micropython/src/voucher/: cose_data.rs  mod.rs  validate.rs  validate_std.rs
examples/xbd-net/: Cargo.toml  Makefile  debug.setup.bash  flash  libcoap-client-riot  log-bridge-laptop  log-bridge-vbox  monitor
examples/xbd-net/.cargo/: config
examples/xbd-net/include/: rustmod.h
examples/xbd-net/libcoap-minimal/: client.cc  server.cc
examples/xbd-net/main/: Makefile  app.config.test  main.c  netdev_eth_minimal.c  netdev_eth_minimal.h  shell_commands.c
examples/xbd-net/main--/: Makefile
examples/xbd-net/modules/minerva_esp32_gnrc/: border_router.c  netdev_eth_gnrc.c
examples/xbd-net/modules/minerva_esp32_gnrc/include/: border_router.h  netdev_eth_gnrc.h
examples/xbd-net/modules/minerva_esp32_minimal/: netdev_eth_minimal.c  netdev_eth_minimal_internal.h
examples/xbd-net/modules/minerva_esp32_netdev_debug/: Makefile.dep  Makefile.include  netdev_eth_minimal.c
examples/xbd-net/modules/minerva_esp32_netdev_debug/include/: netdev_eth_minimal.h
examples/xbd-net/modules/minerva_gcoap/: Makefile  Makefile.dep  client.c  server.c
examples/xbd-net/modules/minerva_gcoap/include/: minerva_gcoap.h
examples/xbd-net/modules/minerva_gnrc/: Makefile  Makefile.dep  border_router.c  esp_eth_init.c  netdev_eth_gnrc.c
examples/xbd-net/modules/minerva_gnrc/esp/: Makefile  minerva_gnrc_esp.h
examples/xbd-net/modules/minerva_gnrc/include/: minerva_border_router.h  minerva_esp_eth.h
examples/xbd-net/modules/minerva_libcoap/: Makefile  Makefile.dep  client-coap.c  client-coap.h
examples/xbd-net/modules/minerva_libcoap/include/: minerva_libcoap.h
examples/xbd-net/modules/minerva_xbd/: Makefile  Makefile.dep  gcoap.c  shell.c  xbd.c
examples/xbd-net/modules/minerva_xbd/include/: minerva_xbd.h
examples/xbd-net/src/: lib.rs  runtime.rs  runtime_old.rs  util.rs  xbd.rs
examples/xbd-net/src/blogos12/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  task.rs
examples/xbd-net/src/embassy/: executor.rs  mod.rs
examples/xbd-net/src/xbd/: blockwise.rs  callback.rs  callbacks.rs  gcoap.rs  mod.rs  server.rs  shell.rs  stream.rs  timeout.rs
examples/xbd-psa/: Cargo.toml  Makefile
examples/xbd-psa/riot/: Makefile  main.c
examples/xbd-psa/src/: lib.rs
examples/xbd-py/: Cargo.toml  Makefile
examples/xbd-py/.cargo/: config
examples/xbd-py/include/: python3_if.h  voucher_if.h
examples/xbd-py/python3/: Makefile  setup.py  test.py
examples/xbd-py/python3/mbedtls2/: Makefile  debug.setup  test.py
examples/xbd-py/python3/mbedtls2/src/mbedtls/: __init__.py  _platform.pyx  pk.pyx  version.pyx
examples/xbd-py/python3/src/voucher/: __init__.py
examples/xbd-py/python3/src/voucher/mbedtls/: _md.pxd  _random.pyx  exceptions.pyx  hashlib.py  mpi.pyx  pk.pxd
examples/xbd-py/python3/voucher/: Makefile  debug.setup  setup.py  test.py
examples/xbd-py/python3/voucher/scripts/: build.sh
examples/xbd-py/python3/voucher/src/voucher/: __init__.py  const.pxd  const.pyx  version.pxd  version.pyx  voucher.pxd  voucher.pyx  vrq.pxd  vrq.pyx
examples/xbd-py/src/: lib.rs  python3.rs
toolchain/xtensa/riot/: riot-build
toolchain/xtensa/serial/: flash  monitor
