[package]
name = "esp32-no_std"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "rustmod"
crate-type = ["staticlib"]

[target.'cfg(not(target_arch = "xtensa"))'.build-dependencies]
##riot-build = { path = "../../crates/riot-build" }

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
mcu-emu = { path = "../../crates/mcu-emu" }

