[package]
name = "esp32-no_std"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "rustmod"
crate-type = ["staticlib"]

[target.'cfg(unix)'.build-dependencies]
##riot-build = { path = "../../crates/riot-build" }

[target.'cfg(unix)'.dependencies]
mcu-emu = { path = "../../crates/mcu-emu" }

