[package]
name = "xbd-micropython"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "voucher"
crate-type = ["staticlib"]

[features]
default = []

x86_64 = ["std", "v3"]
x86_64-lts = ["std", "lts"]
x86 = []         # <-- shim TODO x86 = ["v3"]
x86-lts = ["lts"]
xtensa = []      # <-- shim TODO xtensa = ["v3"]
xtensa-lts = ["lts"]

std = []
v3 = ["minerva-voucher/sign", "minerva-voucher/validate", "minerva-mbedtls/v3"]
lts = ["minerva-voucher/sign-lts", "minerva-voucher/validate-lts"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "6543b39" }

minerva-voucher = { git = "https://github.com/AnimaGUS-minerva/voucher", rev = "e7b985d", default-features = false }
#minerva-voucher = { path = "./voucher", default-features = false }

minerva-mbedtls = { git = "https://github.com/AnimaGUS-minerva/minerva-mbedtls", rev = "e778849", default-features = false, optional = true }
#minerva-mbedtls = { path = "../../../minerva-mbedtls--x86", default-features = false, optional = true }
