[package]
name = "xbd-micropython"
version = "0.1.0"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "voucher"
crate-type = ["staticlib"]

[features]
default = []

x86_64 = ["std", "psa"]
x86 = ["psa"]
xtensa = ["psa"]  # TODO

std = []
psa = ["minerva-voucher/sign", "minerva-voucher/validate"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "984b8dd" }
minerva-voucher = { git = "https://github.com/AnimaGUS-minerva/voucher", rev = "a86d74b" }
