[package]
name = "xbd-net"
version = "0.1.0"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "rustmod"
crate-type = ["staticlib"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "254de7d", features=["allocator"] }
#mcu-if = { path = "crates/mcu-if--debug-alloc", features=["allocator"] }
crossbeam-queue = { version = "0.3.8", default-features = false, features=["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false }
embassy-executor = { path = "crates/embassy/embassy-executor", default-features = false, features=["nightly"] }
heapless = "0.8"
##TODO##riot-wrappers = { version = "0.8", features = [ "set_panic_handler" ] }
