[package]
name = "xbd-psa"
version = "0.1.0"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "rustmod"
crate-type = ["staticlib"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "da77a48", features=["allocator"] }
minerva-mbedtls-test = { git = "https://github.com/AnimaGUS-minerva/minerva-mbedtls", rev = "bb0d0ff" }
