[package]
name = "xbd-py"
version = "0.1.0"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "voucher_if"
crate-type = ["staticlib"]
path = "src/lib.rs"
#path = "src/lib_python3.rs"  # dev

[features]
default = []
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "984b8dd" }
minerva-voucher = { git = "https://github.com/AnimaGUS-minerva/voucher", rev = "1757005" }
