[package]
name = "xbd-py"
version = "0.1.0"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "voucher_if"
crate-type = ["staticlib"]
path = "src/lib.rs"

[features]
default = []
std = []
python3 = ["std"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "f228240" }
minerva-voucher = { git = "https://github.com/AnimaGUS-minerva/voucher", rev = "0917546" }
